--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,16 +9,17 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div class="container">
+    <div class="container">
 
-    <div id="quote-box">
-      <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-      <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+        <div id="quote-box">
+            <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
+            <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+        </div>
+
+        <button id="loadQuote">Show another quote</button>
+
     </div>
-
-    <button id="loadQuote">Show another quote</button>
-
-  </div>
-  <script src="js/script.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
